feat: finish vectorized loss calculation

--- a/Assignment1/svm.ipynb
+++ b/Assignment1/svm.ipynb
@@ -405,9 +405,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive loss: 8.972316e+00 computed in 0.280603s\n",
+      "Vectorized loss: 8.972316e+00 computed in 0.001537s\n",
+      "difference: 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Next implement the function svm_loss_vectorized; for now only compute the loss;\n",
     "# we will implement the gradient in a moment.\n",
