feat: finish vectorized svm gradient calculation

--- a/Assignment1/svm.ipynb
+++ b/Assignment1/svm.ipynb
@@ -438,9 +438,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive loss and gradient: computed in 0.272689s\n",
+      "Vectorized loss and gradient: computed in 0.002741s\n",
+      "difference: 0.000000\n"
+     ]
+    }
+   ],
    "source": [
     "# Complete the implementation of svm_loss_vectorized, and compute the gradient\n",
     "# of the loss function in a vectorized way.\n",
