feat: finish neural net prediction

--- a/Assignment1/two_layer_net.ipynb
+++ b/Assignment1/two_layer_net.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -275,11 +275,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data shape:  (49000, 3072)\n",
+      "Train labels shape:  (49000,)\n",
+      "Validation data shape:  (1000, 3072)\n",
+      "Validation labels shape:  (1000,)\n",
+      "Test data shape:  (1000, 3072)\n",
+      "Test labels shape:  (1000,)\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.data_utils import load_CIFAR10\n",
     "\n",
@@ -338,11 +351,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration 0 / 1000: loss 2.302959\n",
+      "iteration 100 / 1000: loss 2.302368\n",
+      "iteration 200 / 1000: loss 2.298365\n",
+      "iteration 300 / 1000: loss 2.259769\n",
+      "iteration 400 / 1000: loss 2.204694\n",
+      "iteration 500 / 1000: loss 2.140396\n",
+      "iteration 600 / 1000: loss 2.089621\n",
+      "iteration 700 / 1000: loss 2.078667\n",
+      "iteration 800 / 1000: loss 1.931960\n",
+      "iteration 900 / 1000: loss 2.075893\n",
+      "Validation accuracy:  0.281\n"
+     ]
+    }
+   ],
    "source": [
     "input_size = 32 * 32 * 3\n",
     "hidden_size = 50\n",
