feat: start bonus 1

--- a/Assignment1/features.ipynb
+++ b/Assignment1/features.ipynb
@@ -454,6 +454,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **Feature bonus: Using Pre-trained ResNET50 model for feature extraction**\n",
+    "\n",
+    "There exists many ways of feature extraction from images, but one of the more popular ways is using pretrained models for feature extraction on images.\n",
+    "ResNet50 is a famous CNN that have been pre-trained with over a million images on ImageNet, we can use this pre-trained model for our feature extraction on the CIFAR-10 data set.\n",
+    "A framework named `Keras` contains an out-of-the-box ResNet50 available for use.\n",
+    "\n",
+    "I first get my hands on `Keras` when I was studying another HKUST course COMP4901K, which uses `Keras` for NLP.\n",
+    "\n",
+    "The following is my implementation on using ResNet50 for feature extraction from the CIFAR-10 dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'keras'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-0434aea9b7cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# First we import Keras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# Then we import ResNet50\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapplications\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mResNet50\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
+     ]
+    }
+   ],
+   "source": [
+    "# First we import Keras\n",
+    "import keras\n",
+    "# Then we import ResNet50\n",
+    "from keras.applications import ResNet50\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Bonus: Do something extra!\n",
     "Use the material and code we have presented in this assignment to do something interesting. Was there another question we should have asked? Did any cool ideas pop into your head as you were working on the assignment? This is your chance to show off!"
    ]
