feat: finish bonus 1

--- a/Assignment1/features.ipynb
+++ b/Assignment1/features.ipynb
@@ -454,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Feature bonus: Using Pre-trained ResNET50 model for feature extraction**\n",
+    "# **Feature bonus: Using Pre-trained ResNet50 model for feature extraction**\n",
     "\n",
     "There exists many ways of feature extraction from images, but one of the more popular ways is using pretrained models for feature extraction on images.\n",
     "ResNet50 is a famous CNN that have been pre-trained with over a million images on ImageNet, we can use this pre-trained model for our feature extraction on the CIFAR-10 data set.\n",
@@ -467,26 +467,351 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First we import Keras\n",
+    "import keras\n",
+    "# Then we import ResNet50 and other required modules\n",
+    "from keras.models import Model\n",
+    "from keras.preprocessing import image\n",
+    "from keras.applications.resnet50 import ResNet50\n",
+    "from keras.applications.resnet50 import preprocess_input\n",
+    "from keras.layers import Flatten, Input\n",
+    "from cs231n.data_utils import load_CIFAR10\n",
+    "from tqdm import tnrange, tqdm_notebook\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# We use this function to get the CIFAR data set\n",
+    "def get_CIFAR10_data(num_training=49000, num_validation=1000, num_test=1000):\n",
+    "    # Load the raw CIFAR-10 data\n",
+    "    cifar10_dir = 'cs231n/datasets/cifar-10-batches-py'\n",
+    "    X_train, y_train, X_test, y_test = load_CIFAR10(cifar10_dir)\n",
+    "    \n",
+    "    # Subsample the data\n",
+    "    mask = list(range(num_training, num_training + num_validation))\n",
+    "    X_val = X_train[mask]\n",
+    "    y_val = y_train[mask]\n",
+    "    mask = list(range(num_training))\n",
+    "    X_train = X_train[mask]\n",
+    "    y_train = y_train[mask]\n",
+    "    mask = list(range(num_test))\n",
+    "    X_test = X_test[mask]\n",
+    "    y_test = y_test[mask]\n",
+    "    \n",
+    "    return X_train, y_train, X_val, y_val, X_test, y_test\n",
+    "\n",
+    "X_train, y_train, X_val, y_val, X_test, y_test = get_CIFAR10_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we build our feature extration model base on ResNet:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'keras'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-0434aea9b7cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# First we import Keras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# Then we import ResNet50\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapplications\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mResNet50\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/camerash/anaconda3/lib/python3.7/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/camerash/anaconda3/lib/python3.7/site-packages/keras_applications/resnet50.py:265: UserWarning: The output shape of `ResNet50(include_top=False)` has been changed since Keras 2.2.0.\n",
+      "  warnings.warn('The output shape of `ResNet50(include_top=False)` '\n"
      ]
     }
    ],
    "source": [
-    "# First we import Keras\n",
-    "import keras\n",
-    "# Then we import ResNet50\n",
-    "from keras.applications import ResNet50\n"
+    "num_classes = 10\n",
+    "\n",
+    "resNet = ResNet50(weights='imagenet', pooling = max, include_top = False)\n",
+    "input = Input(shape=(32, 32, 3), name = 'image_input')\n",
+    "x = resNet(input)\n",
+    "x = Flatten()(x)\n",
+    "model = Model(inputs=input, outputs=x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then extract features from the training set using the built model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "60cd1512603f4c6895360cecbdc8cd34",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=49000), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_train = X_train.shape[0]\n",
+    "X_train_feats_array = []\n",
+    "\n",
+    "for i in tnrange(num_train):\n",
+    "    x = X_train[i]\n",
+    "    x = preprocess_input(x)\n",
+    "    x = np.expand_dims(x, axis=0)\n",
+    "    \n",
+    "    features = model.predict(x)\n",
+    "    reduced_features = features.squeeze()\n",
+    "    X_train_feats_array.append(reduced_features)\n",
+    "    \n",
+    "X_train_feats = np.array(X_train_feats_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "...and the same for the validation set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a99661ed6b024bb5a25ddc5c8150ebf8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=1000), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_validation = X_val.shape[0]\n",
+    "X_val_feats_array = []\n",
+    "\n",
+    "for i in tnrange(num_validation):\n",
+    "    x = X_val[i]\n",
+    "    x = preprocess_input(x)\n",
+    "    x = np.expand_dims(x, axis=0)\n",
+    "    \n",
+    "    features = model.predict(x)\n",
+    "    reduced_features = features.squeeze()\n",
+    "    X_val_feats_array.append(reduced_features)\n",
+    "    \n",
+    "X_val_feats = np.array(X_val_feats_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "...and the same for the testing set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a1d653bcc334faab4966c05dd1c95ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=1000), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_test = X_test.shape[0]\n",
+    "X_test_feats_array = []\n",
+    "\n",
+    "for i in tnrange(num_test):\n",
+    "    x = X_test[i]\n",
+    "    x = preprocess_input(x)\n",
+    "    x = np.expand_dims(x, axis=0)\n",
+    "    \n",
+    "    features = model.predict(x)\n",
+    "    reduced_features = features.squeeze()\n",
+    "    X_test_feats_array.append(reduced_features)\n",
+    "    \n",
+    "X_test_feats = np.array(X_test_feats_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can then finally use the extracted features to train our two-layer neural net:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration 0 / 1500: loss 2.302587\n",
+      "iteration 100 / 1500: loss 1.130224\n",
+      "iteration 200 / 1500: loss 0.933315\n",
+      "iteration 300 / 1500: loss 0.845468\n",
+      "iteration 400 / 1500: loss 0.768644\n",
+      "iteration 500 / 1500: loss 0.845103\n",
+      "iteration 600 / 1500: loss 0.791864\n",
+      "iteration 700 / 1500: loss 0.744634\n",
+      "iteration 800 / 1500: loss 0.727945\n",
+      "iteration 900 / 1500: loss 0.760798\n",
+      "iteration 1000 / 1500: loss 0.793522\n",
+      "iteration 1100 / 1500: loss 0.739572\n"
+     ]
+    }
+   ],
+   "source": [
+    "from cs231n.classifiers.neural_net import TwoLayerNet\n",
+    "\n",
+    "input_dim = X_train_feats.shape[1]\n",
+    "hidden_dim = 512\n",
+    "num_classes = 10\n",
+    "\n",
+    "learning_rate = 0.1\n",
+    "reg_strength = 0.0001 # 0.001 sometimes achieve better results\n",
+    "rate_decay = 0.9\n",
+    "\n",
+    "net = TwoLayerNet(input_dim, hidden_dim, num_classes)\n",
+    "\n",
+    "# Train the network\n",
+    "stats = net.train(X_train_feats, y_train, X_val_feats, y_val,\n",
+    "            num_iters=1500, batch_size=1000,\n",
+    "            learning_rate=learning_rate, learning_rate_decay=rate_decay,\n",
+    "            reg=reg_strength, verbose=True)\n",
+    "\n",
+    "# Predict on the validation set\n",
+    "val_acc = (net.predict(X_val_feats) == y_val).mean()\n",
+    "print('Hidden size: ', hidden_dim)\n",
+    "print('Regularization strength: ', reg_strength)\n",
+    "print('Learning rate: ', learning_rate)\n",
+    "print('Learning rate decay: ', rate_decay)\n",
+    "print('Validation accuracy: ', val_acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "...plotting the stat graph:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "plt.rcParams['figure.figsize'] = (10.0, 8.0) # set default size of plots\n",
+    "plt.rcParams['image.interpolation'] = 'nearest'\n",
+    "plt.rcParams['image.cmap'] = 'gray'\n",
+    "\n",
+    "# Plot the loss function and train / validation accuracies\n",
+    "plt.subplot(2, 1, 1)\n",
+    "plt.plot(stats['loss_history'])\n",
+    "plt.title('Loss history')\n",
+    "plt.xlabel('Iteration')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.tight_layout(pad=2)\n",
+    "\n",
+    "plt.subplot(2, 1, 2)\n",
+    "plt.plot(stats['train_acc_history'], label='train')\n",
+    "plt.plot(stats['val_acc_history'], label='val')\n",
+    "plt.title('Classification accuracy history')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Clasification accuracy')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And calculating the testing set accuracy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_acc = (net.predict(X_test_feats) == y_test).mean()\n",
+    "print(test_acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The test accuracy is about 69%, which is the best number known to mankind. ( ͡° ͜ʖ ͡°)"
    ]
   },
   {
