--- a/Assignment2/FullyConnectedNets.ipynb
+++ b/Assignment2/FullyConnectedNets.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -244,13 +244,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing relu_forward function:\n",
+      "difference:  4.999999798022158e-08\n"
+     ]
+    }
+   ],
    "source": [
     "# Test the relu_forward function\n",
     "\n",
@@ -279,13 +288,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing relu_backward function:\n",
+      "[[-0.22557183 -1.1928829   0.          0.          0.          0.\n",
+      "   0.         -0.35229594  0.          0.        ]\n",
+      " [ 0.         -0.84338097  0.          0.85434757 -0.90377338 -1.0525584\n",
+      "   0.          0.18083726 -0.4125417   1.22913948]\n",
+      " [-0.97791748 -0.63978524 -0.00880963  0.36213294  0.35148162  0.\n",
+      "  -0.84272962  0.         -2.39079478  0.88256212]\n",
+      " [-1.12082008  0.12416778  0.         -1.62701704  0.          2.00862337\n",
+      "   0.         -0.86943856  0.          0.        ]\n",
+      " [ 0.          0.          0.         -0.67498124  0.         -0.11970425\n",
+      "   0.59700586 -2.0399063   0.         -1.61700346]\n",
+      " [ 0.          0.          1.97009461 -0.81967191  0.42367521 -1.83570698\n",
+      "   0.          0.          0.          0.        ]\n",
+      " [ 0.          2.13935149 -0.77429891  0.          0.          0.\n",
+      "   0.          0.          0.59190367 -0.56016357]\n",
+      " [ 0.          0.          0.          0.          0.37364743 -0.26051388\n",
+      "   0.          0.          0.          0.        ]\n",
+      " [ 0.          0.          0.         -1.74506882 -0.2476718   0.\n",
+      "   1.09734348  0.          0.         -0.32986357]\n",
+      " [ 0.         -0.00396778  0.          0.          0.          0.\n",
+      "  -0.9308637   0.          0.         -1.1058167 ]]\n",
+      "dx error:  1.0\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "x = np.random.randn(10, 10)\n",
