--- a/Assignment2/FullyConnectedNets.ipynb
+++ b/Assignment2/FullyConnectedNets.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -300,27 +300,7 @@
      "output_type": "stream",
      "text": [
       "Testing relu_backward function:\n",
-      "[[-0.22557183 -1.1928829   0.          0.          0.          0.\n",
-      "   0.         -0.35229594  0.          0.        ]\n",
-      " [ 0.         -0.84338097  0.          0.85434757 -0.90377338 -1.0525584\n",
-      "   0.          0.18083726 -0.4125417   1.22913948]\n",
-      " [-0.97791748 -0.63978524 -0.00880963  0.36213294  0.35148162  0.\n",
-      "  -0.84272962  0.         -2.39079478  0.88256212]\n",
-      " [-1.12082008  0.12416778  0.         -1.62701704  0.          2.00862337\n",
-      "   0.         -0.86943856  0.          0.        ]\n",
-      " [ 0.          0.          0.         -0.67498124  0.         -0.11970425\n",
-      "   0.59700586 -2.0399063   0.         -1.61700346]\n",
-      " [ 0.          0.          1.97009461 -0.81967191  0.42367521 -1.83570698\n",
-      "   0.          0.          0.          0.        ]\n",
-      " [ 0.          2.13935149 -0.77429891  0.          0.          0.\n",
-      "   0.          0.          0.59190367 -0.56016357]\n",
-      " [ 0.          0.          0.          0.          0.37364743 -0.26051388\n",
-      "   0.          0.          0.          0.        ]\n",
-      " [ 0.          0.          0.         -1.74506882 -0.2476718   0.\n",
-      "   1.09734348  0.          0.         -0.32986357]\n",
-      " [ 0.         -0.00396778  0.          0.          0.          0.\n",
-      "  -0.9308637   0.          0.         -1.1058167 ]]\n",
-      "dx error:  1.0\n"
+      "dx error:  3.2756349136310288e-12\n"
      ]
     }
    ],
@@ -354,13 +334,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing affine_relu_forward:\n",
+      "dx error:  6.750562121603446e-11\n",
+      "dw error:  8.162015570444288e-11\n",
+      "db error:  7.826724021458994e-12\n"
+     ]
+    }
+   ],
    "source": [
     "from cs231n.layer_utils import affine_relu_forward, affine_relu_backward\n",
     "np.random.seed(231)\n",
@@ -397,13 +388,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing svm_loss:\n",
+      "loss:  8.999602749096233\n",
+      "dx error:  1.4021566006651672e-09\n",
+      "\n",
+      "Testing softmax_loss:\n",
+      "loss:  2.302545844500738\n",
+      "dx error:  9.384673161989355e-09\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "num_classes, num_inputs = 10, 50\n",
@@ -442,13 +447,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing initialization ... \n",
+      "Testing test-time forward pass ... \n",
+      "Testing training loss (no regularization)\n",
+      "Running numeric gradient check with reg =  0.0\n",
+      "W1 relative error: 1.22e-08\n",
+      "W2 relative error: 3.48e-10\n",
+      "b1 relative error: 6.55e-09\n",
+      "b2 relative error: 4.33e-10\n",
+      "Running numeric gradient check with reg =  0.7\n",
+      "W1 relative error: 8.18e-07\n",
+      "W2 relative error: 2.85e-08\n",
+      "b1 relative error: 1.09e-09\n",
+      "b2 relative error: 7.76e-10\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "N, D, H, C = 3, 5, 50, 7\n",
