fix: fc net init error

--- a/Assignment2/FullyConnectedNets.ipynb
+++ b/Assignment2/FullyConnectedNets.ipynb
@@ -544,13 +544,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Iteration 1 / 4900) loss: 2.300578\n",
+      "(Epoch 0 / 10) train acc: 0.144000; val_acc: 0.163000\n",
+      "(Iteration 101 / 4900) loss: 1.821654\n",
+      "(Iteration 201 / 4900) loss: 1.703116\n",
+      "(Iteration 301 / 4900) loss: 1.551367\n",
+      "(Iteration 401 / 4900) loss: 1.617209\n",
+      "(Epoch 1 / 10) train acc: 0.431000; val_acc: 0.449000\n",
+      "(Iteration 501 / 4900) loss: 1.426507\n",
+      "(Iteration 601 / 4900) loss: 1.476780\n",
+      "(Iteration 701 / 4900) loss: 1.594360\n",
+      "(Iteration 801 / 4900) loss: 1.455453\n",
+      "(Iteration 901 / 4900) loss: 1.399711\n",
+      "(Epoch 2 / 10) train acc: 0.493000; val_acc: 0.470000\n",
+      "(Iteration 1001 / 4900) loss: 1.443761\n",
+      "(Iteration 1101 / 4900) loss: 1.534634\n",
+      "(Iteration 1201 / 4900) loss: 1.623464\n",
+      "(Iteration 1301 / 4900) loss: 1.335029\n",
+      "(Iteration 1401 / 4900) loss: 1.424300\n",
+      "(Epoch 3 / 10) train acc: 0.502000; val_acc: 0.470000\n",
+      "(Iteration 1501 / 4900) loss: 1.437172\n",
+      "(Iteration 1601 / 4900) loss: 1.195224\n",
+      "(Iteration 1701 / 4900) loss: 1.283544\n",
+      "(Iteration 1801 / 4900) loss: 1.401329\n",
+      "(Iteration 1901 / 4900) loss: 1.259026\n",
+      "(Epoch 4 / 10) train acc: 0.511000; val_acc: 0.495000\n",
+      "(Iteration 2001 / 4900) loss: 1.251857\n",
+      "(Iteration 2101 / 4900) loss: 1.178800\n",
+      "(Iteration 2201 / 4900) loss: 1.327716\n",
+      "(Iteration 2301 / 4900) loss: 1.185913\n",
+      "(Iteration 2401 / 4900) loss: 1.329273\n",
+      "(Epoch 5 / 10) train acc: 0.540000; val_acc: 0.494000\n",
+      "(Iteration 2501 / 4900) loss: 1.151833\n",
+      "(Iteration 2601 / 4900) loss: 1.234091\n",
+      "(Iteration 2701 / 4900) loss: 1.166877\n",
+      "(Iteration 2801 / 4900) loss: 1.305610\n",
+      "(Iteration 2901 / 4900) loss: 1.128910\n",
+      "(Epoch 6 / 10) train acc: 0.576000; val_acc: 0.502000\n",
+      "(Iteration 3001 / 4900) loss: 1.216503\n",
+      "(Iteration 3101 / 4900) loss: 1.164345\n",
+      "(Iteration 3201 / 4900) loss: 1.271784\n",
+      "(Iteration 3301 / 4900) loss: 1.296565\n",
+      "(Iteration 3401 / 4900) loss: 1.418880\n",
+      "(Epoch 7 / 10) train acc: 0.556000; val_acc: 0.511000\n",
+      "(Iteration 3501 / 4900) loss: 1.143096\n",
+      "(Iteration 3601 / 4900) loss: 1.494719\n",
+      "(Iteration 3701 / 4900) loss: 1.208700\n",
+      "(Iteration 3801 / 4900) loss: 1.235400\n",
+      "(Iteration 3901 / 4900) loss: 1.303767\n",
+      "(Epoch 8 / 10) train acc: 0.573000; val_acc: 0.510000\n",
+      "(Iteration 4001 / 4900) loss: 1.145862\n",
+      "(Iteration 4101 / 4900) loss: 1.185181\n",
+      "(Iteration 4201 / 4900) loss: 1.184589\n",
+      "(Iteration 4301 / 4900) loss: 1.194774\n",
+      "(Iteration 4401 / 4900) loss: 1.020083\n",
+      "(Epoch 9 / 10) train acc: 0.609000; val_acc: 0.503000\n",
+      "(Iteration 4501 / 4900) loss: 0.962742\n",
+      "(Iteration 4601 / 4900) loss: 1.116516\n",
+      "(Iteration 4701 / 4900) loss: 1.431649\n",
+      "(Iteration 4801 / 4900) loss: 1.123698\n",
+      "(Epoch 10 / 10) train acc: 0.610000; val_acc: 0.525000\n"
+     ]
+    }
+   ],
    "source": [
     "model = TwoLayerNet()\n",
     "solver = None\n",
@@ -559,7 +626,18 @@
     "# TODO: Use a Solver instance to train a TwoLayerNet that achieves at least  #\n",
     "# 50% accuracy on the validation set.                                        #\n",
     "##############################################################################\n",
-    "pass\n",
+    "solver = Solver(\n",
+    "    model,\n",
+    "    data,\n",
+    "    update_rule='sgd',\n",
+    "    optim_config={\n",
+    "      'learning_rate': 1e-3,\n",
+    "    },\n",
+    "    lr_decay=0.95,\n",
+    "    num_epochs=10, batch_size=100,\n",
+    "    print_every=100\n",
+    ")\n",
+    "solver.train()\n",
     "##############################################################################\n",
     "#                             END OF YOUR CODE                               #\n",
     "##############################################################################"
