--- a/Assignment2/BatchNormalization.ipynb
+++ b/Assignment2/BatchNormalization.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -240,15 +240,7 @@
      "text": [
       "dx error:  1.7029261167605239e-09\n",
       "dgamma error:  7.420414216247087e-13\n",
-      "dbeta error:  2.8795057655839487e-12\n",
-      "[[-0.00310319  0.00305468 -0.00156246  0.17251307  0.01388029]\n",
-      " [ 0.01147762 -0.10800884 -0.01112564 -0.02021632 -0.02098085]\n",
-      " [-0.01682492 -0.01106847 -0.00384286  0.13581055 -0.04108612]\n",
-      " [ 0.00845049  0.11602263  0.01653096 -0.2881073   0.04818669]]\n",
-      "[[-0.00310319  0.00305468 -0.00156246  0.17251307  0.01388029]\n",
-      " [ 0.01147762 -0.10800884 -0.01112564 -0.02021632 -0.02098085]\n",
-      " [-0.01682492 -0.01106847 -0.00384286  0.13581055 -0.04108612]\n",
-      " [ 0.00845049  0.11602263  0.01653096 -0.2881073   0.04818669]]\n"
+      "dbeta error:  2.8795057655839487e-12\n"
      ]
     }
    ],
@@ -294,13 +286,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dx difference:  1.6697540272642257e-12\n",
+      "dgamma difference:  0.0\n",
+      "dbeta difference:  0.0\n",
+      "speedup: 1.94x\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(231)\n",
     "N, D = 100, 500\n",
